syntax = "proto3";

option java_package = "com.mcmouse88.proto_data_store";

// defines tasks sorting order: no order, by deadline, by priority, by deadline and priority
enum SortOrder {
  UNSPECIFIED = 0;
  NONE = 1;
  BY_DEADLINE = 2;
  BY_PRIORITY = 3;
  BY_DEADLINE_AND_PRIORITY = 4;
}