syntax = "proto3";

option java_package = "com.mcmouse88.proto_data_store";
option java_multiple_files = true;

message UserPreferences {
  // filter for showing / hiding completed tasks
  bool show_completed = 1;
}